# turnirv4

./: .breakpoints  pyproject.toml
turnirv4/turnir_project/: app.py  extensions.py  fighters (copy).csv  fighters.csv  fights.db  readme.md
turnirv4/turnir_project/migrations/versions/: 0dbb6e401e19_init.py  2623e4558e51_init.py  3791a14b2038_init.py  3843262c4438_init.py  60c946196d39_init.py  cc0fd19d2579_init.py
turnirv4/turnir_project/models/: models.py
turnirv4/turnir_project/routes/: routes.py
turnirv4/turnir_project/templates/: base.html  competition.html  competition_start.html  finish.html  home.html  response_blue_fighter_div.html  response_red_fighter_div.html  response_title_div.html
