[tool.poetry]
name = "repl_python3_turnirv4"
version = "0.1.0"
description = ""
authors = ["Zhenya1975 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.36"
alembic = "^1.7.7"
Flask = "^2.1.2"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
